2003-03-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/html/Reference/*lostream*.html:
  - New
 include/pqxx/largeobject.h:
  - in & out are not from std::ios originally, but from std::ios_base
  - Fix: olostream now syncs itself before closing
  - lostream and olostream sync themselves twice before closing
 include/pqxx/util.h:
  - Added ToString<>() specialization for char *const &
 src/cachedresult.cxx:
  - Compile fixes for Sun compiler (thanks Jeroen van Erp)
2003-03-10  J.H.M. Dassen (Ray) <jdassen@debian.org>
 Generate pkgconfig metadata file; updated debianisation.
2003-03-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 Makefile.am:
  - Added debian packaging directory to distribution
 include/pqxx/largeobject.h:
  - Added ilostream, olostream, lostream
 test/test048.cxx:
  - Uses ilostream, olostream
2003-03-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.h, src/largeobject.h, test/test048.cxx:
  - Replaced low-level LargeObject::cunlink() with LargeObject::remove()
  - Added default constructor for LargeObject
 test/test048.cxx:
  - Now also removes the large object it creates
2003-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/all.h:
  - Includes largeobject.h
  - Was missing in archive in 1.5.0
 include/pqxx/connection.h:
  - Made LargeObject a friend, with access to raw connection
 include/pqxx/largeobject.h, src/pqxx/largeobject.cxx:
  - New
 include/pqxx/transactionitf.h:
  - Made Conn() public
 test/test001.cxx:
  - Fixed outdated comment about notice processors & C linkage
 test/test048.cxx:
  - New
2003-02-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, src/cachedresult.cxx:
  - Removed confusing "clear()" method
 include/pqxx/result.h:
  - Can now write Field to any type of stream
 test/test046.cxx, test/test047.cxx:
  - New
2003-02-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Added Documentation section
 doc/libpqxx.sgml, include/pqxx/cursor.h:
  - Various minor updates
 include/pqxx/all.h: